<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesAdminClaves">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="400dp"
        android:layout_height="182dp"
        android:background="#E4E5E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="344dp"
            android:layout_height="64dp"
            android:layout_marginBottom="56dp"
            android:gravity="center_horizontal"
            android:text="@string/opciones_admin_claves"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="460dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.662">

        <Button
            android:id="@+id/btn_Generar_contrasena"
            android:layout_width="324dp"
            android:layout_height="77dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:text="@string/generar_contrasena"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Analizar_contrasena"
            android:layout_width="324dp"
            android:layout_height="77dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:text="@string/analisar_contrasena"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_mis_contrasenasp" />

        <Button
            android:id="@+id/btn_mis_contrasenasp"
            android:layout_width="324dp"
            android:layout_height="77dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:text="@string/mes_contrasenas"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Generar_contrasena" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>