<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F5"
    tools:context=".Menu_principal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="407dp"
        android:layout_height="256dp"
        android:background="#E4E5E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_bienvenido"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.291" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Qué deseas hacer?"
            android:textColor="#03A9F4"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_bienvenido"
            app:layout_constraintVertical_bias="0.529" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="460dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.508">

        <Button
            android:id="@+id/btn_escanear_telefono"
            android:layout_width="324dp"
            android:layout_height="77dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:text="@string/btn_EscanearTel"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_admin_claves"
            android:layout_width="324dp"
            android:layout_height="77dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_btn"
            android:padding="20dp"
            android:paddingLeft="5dp"
            android:text="@string/btn_AdminClaves"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_escanear_telefono" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>